<resources>
    <string name="app_name">完美天气</string>
    <string name="choose_city">选择城市</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>
    <string name="nav_drawer_open">open drawer</string>
    <string name="nav_drawer_close">close drawer</string>
    <string name="temp">23℃</string>
    <string name="update">更新时间:2018-12-12 23:00</string>
    <string name="weather_conditon">多云</string>
    <string name="city">北京</string>
    <string name="weekday">星期一</string>
    <string name="date">2018-012-31</string>
    <string name="detail">详情</string>
    <string name="forecast">预报</string>
    <string name="index">生活指数</string>
    <string name="max_temp">10℃</string>
    <string name="min_temp">0℃</string>
    <string name="temp_sense_keyword">体感温度</string>
    <string name="cancel">取消</string>
    <string name="tip">提示</string>
    <string name="add_city">添加城市</string>
    <string name="title">请选择省份或城市</string>
    <string name="author">Jianming</string>
    <string name="email">email:1358890401@qq.com</string>
    <string name="warning">检测到定位服务已经关闭，为了给您提供更好的体验，建议您在设置里打开定位服务</string>
    <string name="title_activity_weather">weatherActivity</string>
    <string name="title_home">主页</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="login_success">login success</string>
    <string name="login">LOGIN</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="go">GO</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="next">NEXT</string>
    <string name="register">REGISTER</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
