<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <TextView
            android:id="@+id/weekday"
            android:layout_marginStart="16dp"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weekday"/>

        <TextView
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/date"
            android:text="@string/date"
            android:layout_toEndOf="@id/weekday"
            android:layout_marginStart="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/condition"
            android:layout_centerVertical="true"
            android:text="@string/weather_conditon"
            android:layout_toRightOf="@id/date"
            android:layout_marginStart="16dp"
           />
        <ImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_sunny_black_24dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp"
            />

        <TextView
            android:id="@+id/min_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/icon"
            android:text="@string/min_temp"
            android:layout_marginRight="10dp"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/min_temp"
            android:textSize="16sp"
            android:layout_marginTop="15dp"
            android:text="↓"/>

        <TextView
            android:id="@+id/max_temp"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/min_temp"
            android:layout_marginRight="15dp"
            android:text="@string/max_temp"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/max_temp"
            android:textSize="16sp"
            android:layout_marginTop="15dp"
            android:text="↑"/>
    </RelativeLayout>

